# ygents

./: .flake8  .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  REQUIREMENTS.md  pyproject.toml
.github/workflows/: test.yml
design/: agent-core.md  config-management.md  llm-interface.md  mcp-client.md  system-prompt-management.md
design/libs/factmcp/: clients.mdx
examples/: README.md  agent_with_mcp.py  config_example.py  simple_agent.py
src/ygents/: __init__.py
src/ygents/agent/: __init__.py  core.py  exceptions.py  models.py
src/ygents/cli/: __init__.py  main.py
src/ygents/config/: __init__.py  loader.py  models.py
src/ygents/llm/: __init__.py
src/ygents/mcp/: __init__.py  client.py  exceptions.py
src/ygents/prompts/: __init__.py  templates.py
tests/: conftest.py  test_import.py
tests/test_agent/: __init__.py  conftest.py  test_core.py  test_models.py
tests/test_cli/: test_main.py
tests/test_config/: test_loader.py  test_models.py
tests/test_mcp/: __init__.py  conftest.py  test_client.py  test_exceptions.py
tests/test_prompts/: __init__.py  test_templates.py
