[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ygents"
dynamic = ["version"]
description = "LLM powered エージェント。登録されたMCPを実行し、ユーザーの要求を解決するCLIを提供する。"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "yuanying", email = "yuanying@fraction.jp" },
]
keywords = ["llm", "agent", "mcp", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "litellm>=1.0.0",
    "fastmcp>=0.1.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
ygents = "ygents.cli.main:app"

[project.urls]
Homepage = "https://github.com/yuanying/ygents"
Repository = "https://github.com/yuanying/ygents"
Issues = "https://github.com/yuanying/ygents/issues"

[tool.hatch.version]
path = "src/ygents/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/ygents"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--cov=src/ygents",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=0",
]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true